--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +16,55 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+:root {
+  --base-size: 1em;
+  --type-scale: 1.2;
+  --h5: calc(var(--base-size) * var(--type-scale));
+  --h4: calc(var(--h5) * var(--type-scale));
+  --h3: calc(var(--h4) * var(--type-scale));
+  --h2: calc(var(--h3) * var(--type-scale));
+  --h1: calc(var(--h2) * var(--type-scale));
+}
+
+p{
+  font-size: var(--base-size);
+  margin-bottom: 0 !important;
+}
+
+h1{
+  font-size: var(--h1);
+}
+
+h2{  
+  font-size: var(--h2);
+}
+
+h3 {  
+  font-size: var(--h3);
+}
+
+h4 {  
+  font-size: var(--h4);
+}
+
+h5 {  
+  font-size: var(--h5);
+}
+
+small, .text_small {font-size: calc(var(--base-size) / var(--type-scale));}
+
+
+@media  (min-width: 480px){
+  :root{
+    --type-scale: 1.25em;
+  }
+}
+
+@media (min-width: 768px){
+  /* :root{
+    --base-size: 1.4em;
+  } */
+}
+
